--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 numpy==1.26.0
 pandas==2.2.2
 scikit-learn==1.3.1
@@ -12,19 +11,4 @@ fastapi
 uvicorn
 jinja2
 numpy
-=======
-numpy==1.26.0
-pandas==2.2.2
-scikit-learn==1.3.1
-xgboost==1.7.6
-mlflow==2.19.0
-matplotlib==3.8.0
-seaborn==0.12.2
-streamlit
-jsonpickle
-fastapi
-uvicorn
-jinja2
-numpy
->>>>>>> d7e64b796ce19bc24494cf120a3bbe8eb59697e3
-python-multipart
+python multipart
